[package]
name = "dashbook-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }